EngSketchPad/src/EGADS/include/egads.h

/* memory functions */

__ProtoExt__ /*@null@*/ /*@out@*/ /*@only@*/
             void *EG_alloc( size_t nbytes );
__ProtoExt__ void  EG_free( /*@null@*/ /*@only@*/ void *pointer );
/* base-level object functions */

__ProtoExt__ void EG_revision( int *major, int *minor, const char **OCCrev );
__ProtoExt__ int  EG_open( ego *context );
__ProtoExt__ int  EG_deleteObject( ego object );
__ProtoExt__ int  EG_getContext( ego object, ego *context );
__ProtoExt__ int  EG_setOutLevel( ego context, int outLevel );
__ProtoExt__ int  EG_updateThread( ego context );
__ProtoExt__ int  EG_close( ego context );
/* attribute functions */

__ProtoExt__ int  EG_setFullAttrs( ego context, int flag );
__ProtoExt__ int  EG_hollowBody( const ego src, int nface,
                                 /*@null@*/ const ego *faces, double offset,
                                 int join, ego *result,
                                 /*@null@*/ int **facemap );
__ProtoExt__ int  EG_extrude( const ego src, double dist, const double *dir,
                                    ego *result );
__ProtoExt__ int  EG_rotate( const ego src, double angle, const double *axis,
                                   ego *result );
__ProtoExt__ int  EG_sweep( const ego src, const ego spine, int mode,
                                  ego *result );
__ProtoExt__ int  EG_loft( int nsec, const ego *secs, int opt, ego *result );
__ProtoExt__ int  EG_blend( int nsec, const ego *secs, /*@null@*/ double *rc1,
                            /*@null@*/ double *rcN, ego *result );
__ProtoExt__ int  EG_ruled( int nsec, const ego *secs, ego *result );
/* effective topology functions */

__ProtoExt__ int  EG_initEBody( ego tess, double angle, ego *ebody );
__ProtoExt__ int  EG_finishEBody( ego EBody );
__ProtoExt__ int  EG_makeEFace( ego EBody, int nFace, ego *Faces, ego *EFace );
__ProtoExt__ int  EG_makeAttrEFaces( ego EBody, const char *attrName, int *nEFace,
                                     /*@null@*/ ego **EFaces );
__ProtoExt__ int  EG_effectiveMap( ego EObject, double *eparam, ego *Object,
                                   double *param );
__ProtoExt__ int  EG_effectiveEdgeList( ego EEdge, int *nedge, ego **edges,
                                        int **senses, double **tstart );
/* other functions */

__ProtoExt__ int  EG_inTriExact( double *t1, double *t2, double *t3, double *p,
                                 double *w );