EngSketchPad/pyESP/pyEGADS/egads.py


_egads.EG_hollowBody.argtypes = [c_ego, c_int, POINTER(c_ego), c_double, c_int, POINTER(c_ego), POINTER(POINTER(c_int))]
_egads.EG_hollowBody.restype = c_int

_egads.EG_extrude.argtypes = [c_ego, c_double, POINTER(c_double), POINTER(c_ego)]
_egads.EG_extrude.restype = c_int

_egads.EG_rotate.argtypes = [c_ego, c_double, POINTER(c_double), POINTER(c_ego)]
_egads.EG_rotate.restype = c_int

_egads.EG_sweep.argtypes = [c_ego, c_ego, c_int, POINTER(c_ego)]
_egads.EG_sweep.restype = c_int

_egads.EG_loft.argtypes = [c_int, POINTER(c_ego), c_int, POINTER(c_ego)]
_egads.EG_loft.restype = c_int

_egads.EG_blend.argtypes = [c_int, POINTER(c_ego), POINTER(c_double), POINTER(c_double), POINTER(c_ego)]
_egads.EG_blend.restype = c_int

_egads.EG_ruled.argtypes = [c_int, POINTER(c_ego), POINTER(c_ego)]
_egads.EG_ruled.restype = c_int

_egads.EG_initEBody.argtypes = [c_ego, c_double, POINTER(c_ego)]
_egads.EG_initEBody.restype = c_int

_egads.EG_finishEBody.argtypes = [c_ego]
_egads.EG_finishEBody.restype = c_int

_egads.EG_makeEFace.argtypes = [c_ego, c_int, POINTER(c_ego), POINTER(c_ego)]
_egads.EG_makeEFace.restype = c_int

_egads.EG_makeAttrEFaces.argtypes = [c_ego, c_char_p, POINTER(c_int), POINTER(POINTER(c_ego))]
_egads.EG_makeAttrEFaces.restype = c_int

_egads.EG_effectiveMap.argtypes = [c_ego, POINTER(c_double), POINTER(c_ego), POINTER(c_double)]
_egads.EG_effectiveMap.restype = c_int

_egads.EG_effectiveEdgeList.argtypes = [c_ego, POINTER(c_int), POINTER(POINTER(c_ego)), POINTER(POINTER(c_int)), POINTER(POINTER(c_double))]
_egads.EG_effectiveEdgeList.restype = c_int

_egads.EG_inTriExact.argtypes = [POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_inTriExact.restype = c_int

# =============================================================================
#
# egads_dot.h functions
#
# =============================================================================

_egads.EG_setGeometry_dot.argtypes = [c_ego, c_int, c_int, POINTER(c_int), POINTER(c_double), POINTER(c_double)]
_egads.EG_setGeometry_dot.restype = c_int

_egads.EG_hasGeometry_dot.argtypes = [c_ego]
_egads.EG_hasGeometry_dot.restype = c_int

_egads.EG_copyGeometry_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), c_ego]
_egads.EG_copyGeometry_dot.restype = c_int

_egads.EG_evaluate_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_evaluate_dot.restype = c_int

_egads.EG_approximate_dot.argtypes = [c_ego, c_int, c_double, POINTER(c_int), POINTER(c_double), POINTER(c_double)]
_egads.EG_approximate_dot.restype = c_int

_egads.EG_skinning_dot.argtypes = [c_ego, c_int, POINTER(c_ego)]
_egads.EG_skinning_dot.restype = c_int

_egads.EG_makeSolidBody_dot.argtypes = [c_ego, c_int, POINTER(c_double), POINTER(c_double)]
_egads.EG_makeSolidBody_dot.restype = c_int

_egads.EG_setRange_dot.argtypes = [c_ego, c_int, POINTER(c_double), POINTER(c_double)]
_egads.EG_setRange_dot.restype = c_int

_egads.EG_getRange_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), POINTER(c_int)]
_egads.EG_getRange_dot.restype = c_int

_egads.EG_tessMassProps_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_tessMassProps_dot.restype = c_int

_egads.EG_extrude_dot.argtypes = [c_ego, c_ego, c_double, c_double, POINTER(c_double), POINTER(c_double)]
_egads.EG_extrude_dot.restype = c_int

_egads.EG_ruled_dot.argtypes = [c_ego, c_int, POINTER(c_ego)]
_egads.EG_ruled_dot.restype = c_int

_egads.EG_blend_dot.argtypes = [c_ego, c_int, POINTER(c_ego), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_blend_dot.restype = c_int

# =============================================================================

# Extract EGADS error codes
_egads_error_codes = {}
globalDict = globals()
with open(os.path.join(_ESP_ROOT,"include","egadsErrors.h")) as fp:
    lines = fp.readlines()
    for line in lines:
        define = line.split()
        if len(define) < 3: continue
        if define[0] != "#define": continue
        _egads_error_codes[int(define[2])] = define[1]
        globalDict[define[1]] = int(define[2])
        __all__.append(define[1])
del fp
del lines

# Extract PRM error codes
with open(os.path.join(_ESP_ROOT,"include","prm.h")) as fp:
    lines = fp.readlines()
    for line in lines:
        define = line.split()
        if len(define) < 3: continue
        if define[0] != "#define": continue
        if int(define[2]) < 0:
            _egads_error_codes[int(define[2])] = define[1]
        globalDict[define[1]] = int(define[2])
        __all__.append(define[1])
del fp
del lines

# Extract EGADS constants and them to the globals() dictionary
with open(os.path.join(_ESP_ROOT,"include","egadsTypes.h")) as fp:
    lines = fp.readlines()
    for line in lines:
        define = line.split()
        if len(define) < 3: continue
        if define[0] != "#define": continue
        if define[1] == "EGADSPROP":
            globalDict[define[1]] = ' '.join(define[2:])
            continue
        globalDict[define[1]] = int(define[2])
        __all__.append(define[1])
del fp
del lines
del globalDict

# =============================================================================

class EGADSError(Exception):

    # Constructor or Initializer
    def __init__(self, string, status = None):
        self.string = string
        self.status = status

    def __str__(self):
        return self.string

# =============================================================================

def _raiseStatus(stat):
    if stat == EGADS_SUCCESS: return
    errmsg = 'EGADS error code: %s'%(_egads_error_codes[stat])
    raise EGADSError(errmsg, stat)

# =============================================================================

def revision():
    """
    Revision - return EGADS revision

    Returns
    -------
        imajor:  major version number
        iminor:  minor version number
        OCCrev:  OpenCASCADE version string
    """
    imajor = c_int()
    iminor = c_int()
    string = ctypes.c_char_p()

    stat = _egads.EG_revision(ctypes.byref(imajor), ctypes.byref(iminor), ctypes.byref(string))
    if stat: _raiseStatus(stat)

    return (imajor.value, iminor.value, _decode(string.value))

# =============================================================================

def free(ptr):
    """
    Free memory allocated with EG_alloc or EG_realloc returned via ctypes

    Parameters
    ----------
    ptr:
        the ctypes memory poimter to deallocate
    """
    _egads.EG_free(ptr)

# =============================================================================

def c_to_py(c_obj, deleteObject=False, context=None):
    """
    Creates a Python class for an exiting c_ego object.
    
    Parameters
    ----------
    c_obj:
        the c_ego instance
        
    deleteObject:
        if True the class instance will call EG_deleteObject or EG_close 
        for the provided c_ego during garbage collection

    context:
        a Context instance associated with c_obj
    """
    if not isinstance(c_obj, c_ego):
        raise EGADSError('c_obj must be a c_ego instance')

    if context is not None:
        if not isinstance(context, Context):
            raise EGADSError('context must be a Context instance')

        c_context = c_ego()
        stat = _egads.EG_getContext(c_obj, ctypes.byref(c_context))
        if stat: _raiseStatus(stat)
        if ctypes.addressof(context._context.contents) != ctypes.addressof(c_context.contents):
            raise EGADSError("context inconsistent with c_obj!")

    if c_obj.contents.oclass == CONTXT:
        return Context(c_obj, deleteObject=deleteObject)
    else:
        return ego(c_obj, context, deleteObject=deleteObject)

# =============================================================================

class csystem(list):
    """
    Represents a coordinate system attribute
    """
    pass

# =============================================================================

def _close_context(context):
    stat = _egads.EG_close(context)
    if stat: _raiseStatus(stat)

class Context:
    """
    Wrapper to represent and EGADS CONTEXT ego
    """
#=============================================================================-
    def __init__(self, c_context=None, deleteObject=False):
        """
        Constructor only intended for internal use.

        Parameters
        ----------
        c_context:
            a c_ego egads context

        deleteObject:
            If True c_context will be closed automatically
        """
        self._finalize = None
        self._context = None
        if c_context is not None:
            if not isinstance(c_context, c_ego):
                errmsg = 'context must be a c_ego'
                raise EGADSError(errmsg)

            if c_context.contents.oclass != CONTXT:
                errmsg = 'context must be an EGADS CONTXT'
                raise EGADSError(errmsg)

            self._context = c_context
            if deleteObject:
                self._finalize = finalize(self, _close_context, self._context)
        else:
            self._context = c_ego()
            stat = _egads.EG_open(ctypes.byref(self._context))
            if stat: _raiseStatus(stat)
            self._finalize = finalize(self, _close_context, self._context)

#=============================================================================-
    def py_to_c(self, takeOwnership=False):
        """
        Returns the c_ego pointer
        
        Parameters
        ----------
        takeOwnership:
            if True, pyEGADS will no longer close the returned c_ego Context during garbage collection
        """
        if takeOwnership:
            self._finalize.detach()
            self._finalize = None
        return self._context

#=============================================================================-
    def __del__(self):
        # close the context if owned by this instance
        if self._finalize is not None:
            self._finalize()

#=============================================================================-
    def __eq__(self, obj):
        """
        checks pointer equality of underlying c_ego memory address
        """
        return isinstance(obj, Context) and ctypes.addressof(obj._context.contents) == ctypes.addressof(self._context.contents)

#=============================================================================-
    def __ne__(self, obj):
        return not self == obj

#=============================================================================-
    def setOutLevel(self, outlevel=1):
        """
        Sets the EGADS verbosity level, the default is 1.

        Parameters
        ----------
        outlevel: 0 <= outlevel <= 3
            0-silent to 3-debug

        Returns
        -------
        The old outLevel
        """
        stat = _egads.EG_setOutLevel(self._context, c_int(outlevel))
        if stat < 0: _raiseStatus(stat)
        return stat

#=============================================================================-
    def setFullAttrs(self, attrFlag):
        """
        Sets the attribution mode for the Context.

        Parameters
        ----------
        attrFlag:
            the mode flag: 0 - the default scheme, 1 - full attribution node
        """
        stat = _egads.EG_setFullAttrs(self._context, c_int(attrFlag))
        if stat: _raiseStatus(stat)

#=============================================================================-
    def updateThread(self):
        """
        Resets the Context's owning thread ID to the thread calling this function.
        """
        stat = _egads.EG_updateThread(self._context)
        if stat: _raiseStatus(stat)

#=============================================================================-
    def getInfo(self):
        """
        Return information about the context
